# larkdown

./: .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md
R/: app_config.R  app_server.R  app_ui.R  context.R  init.R  mod_streamWindow.R  new_larkdown.R  persona.R  rag.R  run_app.R  shiny.R  stream.R  utils.R
dev/: 01_start.R  02_dev.R
inst/: golem-config.yml
inst/pysrc/: README.md  larkdown.py  pyproject.toml
inst/pysrc/larkdown/: larkdown.py
inst/rmarkdown/templates/larkdown-file/skeleton/: skeleton.Rmd  skeleton.md
inst/rmarkdown/templates/larkdown-glue/: template.yaml
inst/rmarkdown/templates/larkdown-glue/skeleton/: skeleton.Rmd
inst/rmarkdown/templates/larkdown-journal/: template.yaml
inst/rmarkdown/templates/larkdown-journal/skeleton/: skeleton.Rmd
inst/rmarkdown/templates/resume-chat/: template.yaml
inst/rmarkdown/templates/resume-chat/skeleton/: skeleton.Rmd
inst/rstudio/: addins.dcf
inst/system-prompts/: chaz.txt  koji.txt  marjorie.txt  marley.txt
man/: app_server.Rd  app_ui.Rd  chaz_persona.Rd  count_tokens.Rd  current_document.Rd  dir_str.Rd  dir_text.Rd  file_text.Rd  format_date.Rd  generate_random_number.Rd  get_system_message_text.Rd  get_system_message_txt.Rd  import_larkdown.Rd  journal.Rd  jupyter_text.Rd  knit_and_stream_current.Rd  knit_to_messages.Rd  ld_convo_text.Rd  ld_message_type.Rd  ld_register_endpoints.Rd  ld_search.Rd  ld_stream_current.Rd  messages_text.Rd  new_larkdown.Rd  register_endpoint.Rd  run_app.Rd  stream_current.Rd  ts_filename.Rd  yt_desc.Rd  yt_text.Rd
